# content_automation

./: .gitignore  main.py  pyproject.toml
src/core/: dependencies.py  settings.py
src/crew/: agents.py  builder.py  prompt_manager.py  prompts.py  tasks.py  tools.py
src/langg/: graph.py  models.py  nodes.py  state.py
src/models/: content.py
src/routes/: generate_content.py
src/services/: agent_service.py  elevenlabs_service.py  localfile_service.py  subtitle_generator.py
src/services/pchain/: chain_prompt_manager.py  chainable.py  responses.py
src/services/pchain/prompt_chains/: prompt_check_story.json  prompt_choose_story.json  prompt_get_midjourney_prompts.json  prompt_get_story.json  prompt_parse_output.json
src/utils/: graph.py  nodes.py
