[tool.poetry]
name = "content-automation"
version = "0.1.0"
description = "Content Automation API"
authors = ["Brayan Barreto Rolong <brayanbarreto1130@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = ">=0.95.0"
openai = ">=1.0.0"
pydantic-settings = ">=2.1.0"
crewai = {extras = ["tools"], version = "^0.30.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"